Fixed overflow issue in smaller screen sizes

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,6 +9,7 @@ html {
 
 body {
   background-color: $bg-color;
+  overflow-x: hidden!important;
 }
 
 // Nav Link
